--- a/flask/checkerboard/templates/checkerboard.html
+++ b/flask/checkerboard/templates/checkerboard.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
     <title>Document</title>
-    <link rel="stylesheet" type="tex/css" href="{{url_for('static', filename='style.css') }}">
+    
 </head>
 <body>
-    <h1>Hello!!!!!!</h1>
-    {{result}}
+    {% for row in result %}
+    <div>
+        {% for cell in row %}{% if cell == 1%}<div class='cell1'></div>{% else %}<div class='cell0'></div>{% endif %}{% endfor %}
+    </div>
+    {% endfor %}
 </body>
 </html>
