--- a/flask/checkerboard/static/style.css
+++ b/flask/checkerboard/static/style.css
@@ -1,3 +1,25 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    line-height: 0px;
+}
 h1 {
     color: rebeccapurple;
+}
+.cell{
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+}
+.cell1{
+    background-color: rebeccapurple;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+}
+.cell0{
+    background-color: burlywood;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
 }
